<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forth_bg"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="com.parentof.mai.views.fragments.TwoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skipFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/twentydp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteensp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twentydp"
            android:text="@string/bringing_science"
            android:textColor="@color/white"
            style="@style/MyStyle"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/to_the_art"
            android:textColor="@color/white"
            android:textSize="@dimen/twentysp"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/tendp"
        android:text="@string/whatever"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteensp" />

    <LinearLayout
        android:id="@+id/ll_letsBegin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:layout_marginBottom="@dimen/thirtydp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/letsBeginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lets_begin_border"
            android:gravity="bottom"
            android:paddingBottom="@dimen/tendp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="@dimen/tendp"
            android:text="@string/lets_begin"
            android:textColor="@color/begin"
            android:textSize="@dimen/eighteensp" />
    </LinearLayout>
</LinearLayout>
